--- a/trunk/unitdvdinfo1.lfm
+++ b/trunk/unitdvdinfo1.lfm
@@ -1,42 +1,48 @@
 object Form1: TForm1
   Left = 246
-  Height = 496
+  Height = 480
   Top = 150
-  Width = 582
+  Width = 640
+  AllowDropFiles = True
   Caption = 'DVD Info'
-  ClientHeight = 496
-  ClientWidth = 582
+  ClientHeight = 480
+  ClientWidth = 640
   Font.Height = -16
   Font.Name = 'MS UI Gothic'
   OnCreate = FormCreate
+  OnDropFiles = FormDropFiles
+  Position = poDesktopCenter
   LCLVersion = '0.9.31'
   object Memo1: TMemo
+    AnchorSideTop.Control = Label1
+    AnchorSideTop.Side = asrBottom
     Left = 12
-    Height = 380
-    Top = 72
-    Width = 558
+    Height = 406
+    Top = 30
+    Width = 616
     Anchors = [akTop, akLeft, akRight, akBottom]
+    BorderSpacing.Top = 4
     Font.Height = -16
     Font.Name = 'MS UI Gothic'
     ParentFont = False
     ScrollBars = ssAutoBoth
     TabOrder = 0
+    WordWrap = False
   end
   object Label1: TLabel
     Left = 14
-    Height = 55
+    Height = 17
     Top = 9
-    Width = 554
+    Width = 612
     Anchors = [akTop, akLeft, akRight]
-    AutoSize = False
-    Caption = 'DVDINFO "isoファイル名" として実行してください。'#13#10'（DVDINFO.exe に isoファイル名をドラッグ＆ドロップでもOK）'
+    Caption = 'ISOファイルをドラッグ＆ドロップしてください。'
     ParentColor = False
     WordWrap = True
   end
   object SpinEdit1: TSpinEdit
     Left = 88
     Height = 24
-    Top = 464
+    Top = 448
     Width = 58
     Anchors = [akLeft, akBottom]
     TabOrder = 1
@@ -44,7 +50,7 @@ object Form1: TForm1
   object Label2: TLabel
     Left = 16
     Height = 17
-    Top = 464
+    Top = 448
     Width = 70
     Anchors = [akLeft, akBottom]
     Caption = 'TITLE NO:'
@@ -53,7 +59,7 @@ object Form1: TForm1
   object Button1: TButton
     Left = 163
     Height = 25
-    Top = 463
+    Top = 447
     Width = 75
     Anchors = [akLeft, akBottom]
     Caption = '再実行'
